Fix track list being cut short in desktop layout.

--- a/MaterialSkin/HTML/material/html/css/desktop.css
+++ b/MaterialSkin/HTML/material/html/css/desktop.css
@@ -82,6 +82,11 @@
  height:calc(var(--100vh) - (var(--main-toolbar-height) + (var(--sub-toolbar-height)*2) + var(--bottom-toolbar-height)))!important;
 }
 
+.detailed-sub .lms-list.browse-track-list {
+ top:calc(var(--main-toolbar-height) + (var(--sub-toolbar-height)*3))!important;
+ height:calc(var(--100vh) - (var(--main-toolbar-height) + (var(--sub-toolbar-height)*3) + var(--bottom-toolbar-height)))!important;
+}
+
 .lms-image-grid-jump, .lms-list-jump {
  margin-left:var(--jump-list-width);
 }
